--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "@supabase/supabase-js": "^1.35.4",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
