--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
     "@supabase/supabase-js": "^1.35.4",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
