--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "migrate": "prisma migrate dev",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^1.9.1",
-    "@supabase/supabase-js": "^1.35.4",
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.1",
+    "next-auth": "^4.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zod": "^3.17.3"
@@ -28,6 +30,7 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.2.1",
     "postcss": "^8.4.14",
+    "prisma": "^4.0.0",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
